# js-link

./: .gitignore  Cargo.toml  README.md  install.md  justfile  package.json  playwright.config.ts  tsconfig.json
.sqlx/: query-0721ce7856fbec584d451756a3ae9446856a8ac8df75f06bf320b74bcfc805ce.json  query-2d9944f4f26437a848a7f3d1543c664b728dce60a7bcd39582f35c1963e5f684.json  query-3267c3e413bc64ce4e6354907903fa04d6c925cf9d73c095b4610cc42b152b0e.json  query-3f32bb4bb94d3546cd5992966445b1c9ac7c96c1bd37b1840df23282621f19cd.json  query-53a7c935d82c7dfe62758cbd03f8487413d50c8b6d10af620cd5e36eaf5a24fa.json  query-5698b6e995d6ef759c907f8e63d9a0de26c6929305016232ee14217e6c244080.json  query-58d4f51466d6ca356266fa0359e6f300681237c8131c14708e0ec3d9764f5b9c.json  query-5a8cc005ea5dc6fea2126f4cc87b616e3f67a7a282889a493b269906b33805f1.json  query-5ac708615591998b232f6a538e5c07e0b6d259145c31b8df24eceecec0dc1e7b.json  query-81a6d192e12389c5db6f5f3941d483241617198cab7855eca829d7d9f9b5f0c9.json  query-937ab7c769ce94198b283de2a44419f9fb88ec5cdfb00024cc5be74045a470fe.json  query-abc7b313d812388763b97a4eb87096b185e74a8e6199996771418be5dfb0f827.json  query-ada10d264d5772e9bacbd697c66885043b80d730a1afcca6e3a4890e333436f1.json  query-b2f921cc81ea03d7cc55b939f83129ecff4eb871683e2cb8c0dc87b85f131615.json  query-cce4caedc271456eb1f1320a200e3bded139880fd1804ab62f0bcdfebc9532a3.json  query-d97cd8388ab253c61a0888debc96ba983fd998ce553d627e50f5071883ae22c7.json  query-de2190d2a75d792b875b03f669da136008a528af87ffc3e81088695d58f60a3b.json  query-f101dcf08cb56c87a51ff186fdd1e5d57525aefa8044db7c1cd79fc4922cf4ef.json  query-f361a08c74e0980b4a4c3568c71f6d9517d8984c3f9feb353d1e7ddf2a494406.json
frontend/: index.html  package.json  vite.config.js
frontend/.bin/: copy-to-backend
frontend/src/: app.js  main.js
frontend/src/styles/: components.css  layout.css  variables.css
migrations/: 20260115155713_initial_schema.sql  20260115164747_create_network_settings_table.sql  20260117154900_add_request_type.sql  20260118000000_add_body_and_auth_fields.sql
src/: db.rs  environments.rs  executor.rs  folders.rs  import_api.rs  importers.rs  main.rs  network.rs  proxy.rs  requests.rs  websocket.rs
static/assets/: index-BSNfDdl3.js  index-DXE34o02.js
static/css/: style.css
static/js/: app.js
templates/: index.stpl
tests/: e2e.spec.ts
